--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 </head>
 
 <body>
-
+    <button class="burger-btn">
+        <div class="burger-btn__box">
+            <div class="burger-btn__bars"></div>
+        </div>
+    </button>
 
 
 
