--- a/index.html
+++ b/index.html
@@ -36,6 +36,39 @@
         <div class="white-block white-block-left"></div>
     </header>
 
+    <main class="main">
+        <section class="dreams section-padding section white-section">
+            <div class="wrapper">
+                <h2 class="section-heading">Spełniaj marzenia</h2>
+                <div class="dreams__box">
+                    <div class="dreams__box-img">
+                        <img src="/img/paradise-598201_640.jpg" alt="Domki nad oceanem" class="dreams__img">
+                    </div>
+                    <div class="dreams__box-text">
+                        <h3 class="dreams__title">Wymarzone wakacje</h3>
+                        <p class="dreams__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate
+                            consequuntur sit doloremque quam aliquid blanditiis dolorum nihil obcaecati deserunt odio
+                            facilis incidunt cupiditate perspiciatis vero fugiat ad, id dignissimos nemo.</p>
+                    </div>
+                </div>
+
+                <div class="dreams__box">
+                    <div class="dreams__box-img dreams__box-img--right">
+                        <img src="/img/bora-bora-3023437_640.jpg" alt="Domki nad oceanem z górą w tle"
+                            class="dreams__img">
+                    </div>
+                    <div class="dreams__box-text dreams__box-text-right">
+                        <h3 class="dreams__title">Wymarzone wakacje</h3>
+                        <p class="dreams__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate
+                            consequuntur sit doloremque quam aliquid blanditiis dolorum nihil obcaecati deserunt odio
+                            facilis incidunt cupiditate perspiciatis vero fugiat ad, id dignissimos nemo.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
     <script src="js/main.js"></script>
 </body>
 
