dreams__title in section dreams changed

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             class="dreams__img">
                     </div>
                     <div class="dreams__box-text dreams__box-text-right">
-                        <h3 class="dreams__title">Wymarzone wakacje</h3>
+                        <h3 class="dreams__title">Niezapomniane przygody</h3>
                         <p class="dreams__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate
                             consequuntur sit doloremque quam aliquid blanditiis dolorum nihil obcaecati deserunt odio
                             facilis incidunt cupiditate perspiciatis vero fugiat ad, id dignissimos nemo.</p>
