--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <img src="/img/bora-bora-3023437_640.jpg" alt="Domki nad oceanem z górą w tle"
                             class="dreams__img">
                     </div>
-                    <div class="dreams__box-text dreams__box-text-right">
+                    <div class="dreams__box-text dreams__box-text--right">
                         <h3 class="dreams__title">Niezapomniane przygody</h3>
                         <p class="dreams__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate
                             consequuntur sit doloremque quam aliquid blanditiis dolorum nihil obcaecati deserunt odio
