misspelling s in islands section corrected

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
             <div class="wrapper">
                 <h2 class="section-heading">Polecane Wyspy</h2>
 
-                <div class="island__cards">
+                <div class="islands__cards">
                     <div class="islands__card" onclick="void(0)">
                         <div class="islands__card-img islands__card-img--first">
                             <h3 class="islands__card-img-title">Wyspa Tiki Taki</h3>
-                            <p class="islands__card_img-info"><i class="fas fa-angle-double-right"></i>Więcej informacji
+                            <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i>Więcej informacji
                             </p>
                         </div>
                         <div class="islands__card-info">
@@ -103,7 +103,7 @@
                     <div class="islands__card" onclick="void(0)">
                         <div class="islands__card-img islands__card-img--second">
                             <h3 class="islands__card-img-title">Wyspa Toca Toca</h3>
-                            <p class="islands__card_img-info"><i class="fas fa-angle-double-right"></i>Więcej informacji
+                            <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i>Więcej informacji
                             </p>
                         </div>
                         <div class="islands__card-info">
@@ -122,7 +122,7 @@
                     <div class="islands__card" onclick="void(0)">
                         <div class="islands__card-img islands__card-img--third">
                             <h3 class="islands__card-img-title">Wyspa Nobu</h3>
-                            <p class="islands__card_img-info"><i class="fas fa-angle-double-right"></i>Więcej informacji
+                            <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i>Więcej informacji
                             </p>
                         </div>
                         <div class="islands__card-info">
