offers section in index.html created

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <section class="islands section-padding section white-section" id="islands">
             <div class="wrapper">
                 <h2 class="section-heading">Polecane Wyspy</h2>
-
+                
                 <div class="islands__cards">
                     <div class="islands__card" onclick="void(0)">
                         <div class="islands__card-img islands__card-img--first">
@@ -137,8 +137,55 @@
                             <button class="islands__card-info-btn btn-special-animation">Wybierz</button>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
 
+        <section class="offers section-padding section" id="offers">
 
+            <div class="white-block white-block-right"></div>
+            <div class="white-block white-block-left"></div>
+
+            <div class="wrapper">
+
+                <h2 class="section-heading">Oferty</h2>
+
+                <div class="offers__box">
+
+                    <div class="offers__option">
+                        <img src="img/option1.jpg" alt="Impreza z dziećmi nad wodą" class="offers__option-img">
+                        <div class="offers__option-info">
+                            <h3 class="offers__option-heading">Wyjazd z dziećmi</h3>
+                            <p class="offers__option-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum
+                                ipsa ad cumque odit, adipisci eveniet aspernatur consectetur tempora excepturi deserunt.
+                            </p>
+                            <p class="offers__option-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            <button class="offers_option-btn btn-special-animation">Wybierz</button>
+                        </div>
+                    </div>
+                    <div class="offers__option">
+                        <img src="img/option2.jpg" alt="Ognisko z kumplami"
+                            class="offers__option-img offers__option-img--right">
+                        <div class="offers__option-info">
+                            <h3 class="offers__option-heading">Wyjazd z kumplami</h3>
+                            <p class="offers__option-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum
+                                ipsa ad cumque odit, adipisci eveniet aspernatur consectetur tempora excepturi deserunt.
+                            </p>
+                            <p class="offers__option-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            <button class="offers_option-btn btn-special-animation">Wybierz</button>
+                        </div>
+                    </div>
+                    <div class="offers__option">
+                        <img src="img/option3.jpg" alt="Impreza we dwoje" class="offers__option-img">
+                        <div class="offers__option-info">
+                            <h3 class="offers__option-heading">Tylko we dwojei</h3>
+                            <p class="offers__option-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum
+                                ipsa ad cumque odit, adipisci eveniet aspernatur consectetur tempora excepturi deserunt.
+                            </p>
+                            <p class="offers__option-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            <button class="offers_option-btn btn-special-animation">Wybierz</button>
+                        </div>
+                    </div>
 
 
                 </div>
