--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <section class="islands section-padding section white-section" id="islands">
             <div class="wrapper">
                 <h2 class="section-heading">Polecane Wyspy</h2>
-                
+
                 <div class="islands__cards">
                     <div class="islands__card" onclick="void(0)">
                         <div class="islands__card-img islands__card-img--first">
@@ -151,7 +151,6 @@
                 <h2 class="section-heading">Oferty</h2>
 
                 <div class="offers__box">
-
                     <div class="offers__option">
                         <img src="img/option1.jpg" alt="Impreza z dziećmi nad wodą" class="offers__option-img">
                         <div class="offers__option-info">
@@ -160,7 +159,7 @@
                                 ipsa ad cumque odit, adipisci eveniet aspernatur consectetur tempora excepturi deserunt.
                             </p>
                             <p class="offers__option-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <button class="offers_option-btn btn-special-animation">Wybierz</button>
+                            <button class="offers__option-btn btn-special-animation">Wybierz</button>
                         </div>
                     </div>
                     <div class="offers__option">
@@ -172,7 +171,7 @@
                                 ipsa ad cumque odit, adipisci eveniet aspernatur consectetur tempora excepturi deserunt.
                             </p>
                             <p class="offers__option-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <button class="offers_option-btn btn-special-animation">Wybierz</button>
+                            <button class="offers__option-btn btn-special-animation">Wybierz</button>
                         </div>
                     </div>
                     <div class="offers__option">
@@ -183,7 +182,7 @@
                                 ipsa ad cumque odit, adipisci eveniet aspernatur consectetur tempora excepturi deserunt.
                             </p>
                             <p class="offers__option-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <button class="offers_option-btn btn-special-animation">Wybierz</button>
+                            <button class="offers__option-btn btn-special-animation">Wybierz</button>
                         </div>
                     </div>
 
