reviews section in index.html created

--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
         <section class="islands section-padding section white-section" id="islands">
             <div class="wrapper">
                 <h2 class="section-heading">Polecane Wyspy</h2>
-
                 <div class="islands__cards">
                     <div class="islands__card" onclick="void(0)">
                         <div class="islands__card-img islands__card-img--first">
@@ -145,11 +144,8 @@
 
             <div class="white-block white-block-right"></div>
             <div class="white-block white-block-left"></div>
-
+            <h2 class="section-heading">Oferty</h2>
             <div class="wrapper">
-
-                <h2 class="section-heading">Oferty</h2>
-
                 <div class="offers__box">
                     <div class="offers__option">
                         <img src="img/option1.jpg" alt="Impreza z dziećmi nad wodą" class="offers__option-img">
@@ -185,11 +181,49 @@
                             <button class="offers__option-btn btn-special-animation">Wybierz</button>
                         </div>
                     </div>
-
-
                 </div>
             </div>
+        </section>
 
+        <section class="reviews section-padding section white-section" id="reviews">
+            <h2 class="section-heading">Opinie</h2>
+            <div class="wrapper">
+                <div class="reviews__boxes">
+                    <div class="reviews__box">
+                        <div class="reviews__box-img">
+                            <img src="img/opinion1.jpg" alt="Anna Nowak">
+                        </div>
+                        <div class="reviews__box-info">
+                            <div class="reviews__box-quote"><i class="fas fa-quote-right"></i></div>
+                            <p class="reviews__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Debitis quidem nobis ea? Vel amet id at nesciunt. Vel, eos quos.</p>
+                        </div>
+                        <strong>Anna Nowak</strong>
+                    </div>
+                    <div class="reviews__box">
+                        <div class="reviews__box-img">
+                            <img src="img/opinion2.jpg" alt="Jan Kowalski">
+                        </div>
+                        <div class="reviews__box-info">
+                            <div class="reviews__box-quote"><i class="fas fa-quote-right"></i></div>
+                            <p class="reviews__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Debitis quidem nobis ea? Vel amet id at nesciunt. Vel, eos quos.</p>
+                        </div>
+                        <strong>Jan Kowalski</strong>
+                    </div>
+                    <div class="reviews__box">
+                        <div class="reviews__box-img">
+                            <img src="img/opinion3.jpg" alt="Maria Wiśniewska">
+                        </div>
+                        <div class="reviews__box-info">
+                            <div class="reviews__box-quote"><i class="fas fa-quote-right"></i></div>
+                            <p class="reviews__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Debitis quidem nobis ea? Vel amet id at nesciunt. Vel, eos quos.</p>
+                        </div>
+                        <strong>Maria Wiśniewska</strong>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
