path of image changed

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h2 class="section-heading">Spełniaj marzenia</h2>
                 <div class="dreams__box">
                     <div class="dreams__box-img">
-                        <img src="/img/option2" alt="Domki nad oceanem" class="dreams__img">
+                        <img src="/img/option2.jpg" alt="Domki nad oceanem" class="dreams__img">
                     </div>
                     <div class="dreams__box-text">
                         <h3 class="dreams__title">Wymarzone wakacje</h3>
